# VNAMO

./: README.md  frames_2025-08-23_12.46.16.gv  frames_2025-09-25_11.49.50.gv
gripper_description/: CMakeLists.txt  package.xml
gripper_description/urdf/: soft_robotics_gripper.urdf  soft_robotics_gripper.xacro.txt
mir_description/config/: diffdrive_controller combined copy.yaml  diffdrive_controller.yaml  diffdrive_controller_combined.yaml.txt
mir_description/urdf/: mir.urdf.xacro  robot.urdf
mir_description/urdf/include/: mir_250_v1.urdf.xacro
mir_gazebo/: CMakeLists.txt
mir_gazebo/launch/: gripper.py  mir_gazebo_launch copy.py  mir_gazebo_launch.py  mir_gazebo_launch_solo_moveit.py
mir_gazebo/worlds/: maze.world  maze_original.world  maze_with_chair.world
mir_navigation/: CMakeLists.txt  package.xml
mir_navigation/action/: CheckVisibility.action  GrabPoint.action  ManipulateBox.action  ManipulateObstacle.action  ObserveObstacle.action
mir_navigation/behavior_trees/: navigate_to_pose_w_replanning_and_recovery.xml
mir_navigation/config/: mir_nav_params.yaml
mir_navigation/launch/: action_services.launch.py
mir_navigation/launch/include/: navigation.py
mir_navigation/scripts/: LiDar_Dection copy.py  LiDar_Dection.py  LiDar_Dection_costmap_copy.py  Planner_explanation.py  lstar_obstacle_checker.py  lstar_obstacle_checker_depth_working.py  lstar_obstacle_checker_one_Service.py  lstar_obstacle_checker_partial_done_moveit_problem.py  lstar_obstacle_checker_thread_issue.py  lstar_obstacle_checker_w_service.py  lstar_obstacle_checker_wo_service.py  observe_obstacle_server.py  observe_obstacle_server_copy.py  pull_action_server.py  push.py  push_geometry_server.py  push_manipulation_action_server.py  push_original.py  visibility_action.py  yolo_detector.py
mir_navigation/scripts/__pycache__/: LiDar_Dection_arurco_moveit.py
mir_navigation/scripts/original_working_file/: LiDar_Dection_Originial.py  LiDar_Dection_with_nav2.py  Planner_explanation_original.py  lstar_obstacle_checker.py  push copy.py  push_14112025.py  push_with_service.py  yolo_detector_original.py
mir_navigation/scripts/previous_version_files/: LiDar_Dection_arurco_generatro.py  LiDar_Dection_moveit_done.py  test_file.py  yolo_detector.py
mir_navigation/srv/: ComputePreManipPose.srv  ComputeSidePeekPoints.srv  VisibilityCheck.srv
moveit_config/: .setup_assistant  package.xml
moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  mir_250.ros2_control.xacro  mir_250.srdf  mir_250.srdf.txt  mir_250.urdf.xacro  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  ros2_controllers.yaml.txt
moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
