<?xml version="1.0"?>
<package format="3">
  <name>gripper_description</name>
  <version>1.0.0</version>
  <description>Soft Robotics Gripper Description</description>
  
  <maintainer email="dikshantthakur12@example.com">Your Name</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>xacro</build_depend>
  <exec_depend>xacro</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
