<?xml version="1.0"?>
<package format="3">
  <name>mir_navigation</name>
  <version>1.1.3</version>
  <description>Launch and configuration files for move_base, localization etc. on the MiR robot.</description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <author email="martin.guenther@dfki.de">Martin Günther</author>

  <license>BSD</license>

  <url type="website">https://github.com/dfki-ric/mir_robot</url>
  <url type="repository">https://github.com/dfki-ric/mir_robot</url>
  <url type="bugtracker">https://github.com/dfki-ric/mir_robot/issues</url>

  <depend>mir_driver</depend>
  <depend>rviz2</depend>
  <depend>navigation2</depend>
  <depend>slam_toolbox</depend>
  
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv2</depend>
  <depend>image_transport</depend>

  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <depend>vision_msgs</depend>

  
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rosidl_cmake</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rosidl_runtime_cpp</exec_depend>
  <build_depend>action_msgs</build_depend>
  <exec_depend>action_msgs</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <depend>moveit_msgs</depend>
  <depend>shape_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
